src/objects/Job_Description__c.object
<CustomObject>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technology__c</fullName>
        <label>Technology</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Azure</fullName>
                </value>
                <value>
                    <fullName>AWS</fullName>
                </value>
                <value>
                    <fullName>Salesforce</fullName>
                </value>
                <value>
                    <fullName>DotNet</fullName>
                </value>
                <value>
                    <fullName>Cloud</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
                <value>
                    <fullName>2021</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Job Description</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>JD-{0000000}</displayFormat>
        <label>Job Description Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Descriptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>